--- a/MakeMeShope/test-output/old/Default suite/methods-alphabetical.html
+++ b/MakeMeShope/test-output/old/Default suite/methods-alphabetical.html
@@ -1,16 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="95b565">  <td>24/07/29 07:22:29</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login_Test.LoginTest(java.lang.String,java.lang.String)[pri:0, instance:com.Fugare.MakeMeShope.Login_Test@1dde4cb2]">LoginTest</td> 
+<tr bgcolor="9da26d">  <td>24/08/03 02:49:11</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;UpladFile.setUp()[pri:0, instance:com.Fugare.MakeMeShope.UpladFile@247310d0]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="9da26d">  <td>24/08/03 02:49:20</td>   <td>9557</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;UpladFile.terwoubn()[pri:0, instance:com.Fugare.MakeMeShope.UpladFile@247310d0]">&lt;&lt;terwoubn</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="9da26d">  <td>24/08/03 02:49:14</td>   <td>3395</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UpladFile.uploadflie()[pri:0, instance:com.Fugare.MakeMeShope.UpladFile@247310d0]">uploadflie</td> 
   <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="95b565">  <td>24/07/29 07:22:29</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login_Test.LoginTest(java.lang.String,java.lang.String)[pri:0, instance:com.Fugare.MakeMeShope.Login_Test@1dde4cb2]">LoginTest</td> 
-  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="95b565">  <td>24/07/29 07:22:27</td>   <td>-2065</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Login_Test.setUp()[pri:0, instance:com.Fugare.MakeMeShope.Login_Test@1dde4cb2]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="95b565">  <td>24/07/29 07:22:27</td>   <td>-2065</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Login_Test.setUp()[pri:0, instance:com.Fugare.MakeMeShope.Login_Test@1dde4cb2]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="95b565">  <td>24/07/29 07:22:44</td>   <td>14805</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Login_Test.tearDown()[pri:0, instance:com.Fugare.MakeMeShope.Login_Test@1dde4cb2]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="95b565">  <td>24/07/29 07:22:44</td>   <td>14805</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Login_Test.tearDown()[pri:0, instance:com.Fugare.MakeMeShope.Login_Test@1dde4cb2]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
 </table>
