--- a/MakeMeShope/test-output/old/Suite/methods-alphabetical.html
+++ b/MakeMeShope/test-output/old/Suite/methods-alphabetical.html
@@ -1,6 +1,18 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="aaae78">  <td>24/07/28 11:16:40</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Register.Register_Test()[pri:0, instance:com.Fugare.MakeMeShope.Register@3427b02d]">Register_Test</td> 
+<tr bgcolor="d89fc1">  <td>24/08/03 03:05:51</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login_Test.LoginTest(java.lang.String,java.lang.String)[pri:0, instance:com.Fugare.MakeMeShope.Login_Test@1972e513]">LoginTest</td> 
+  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="d89fc1">  <td>24/08/03 03:05:55</td>   <td>4201</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login_Test.dashboardTitle()[pri:0, instance:com.Fugare.MakeMeShope.Login_Test@1972e513]">dashboardTitle</td> 
+  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="a7b1b3">  <td>24/08/03 03:05:38</td>   <td>-13524</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;UpladFile.setUp()[pri:0, instance:com.Fugare.MakeMeShope.UpladFile@609e8838]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="d89fc1">  <td>24/08/03 03:05:49</td>   <td>-2026</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Login_Test.setUp()[pri:0, instance:com.Fugare.MakeMeShope.Login_Test@1972e513]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="d89fc1">  <td>24/08/03 03:05:56</td>   <td>4933</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Login_Test.tearDown()[pri:0, instance:com.Fugare.MakeMeShope.Login_Test@1972e513]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="a7b1b3">  <td>24/08/03 03:05:48</td>   <td>-2910</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;UpladFile.terwoubn()[pri:0, instance:com.Fugare.MakeMeShope.UpladFile@609e8838]">&lt;&lt;terwoubn</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="a7b1b3">  <td>24/08/03 03:05:43</td>   <td>-8353</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UpladFile.uploadflie()[pri:0, instance:com.Fugare.MakeMeShope.UpladFile@609e8838]">uploadflie</td> 
   <td>main@1159190947</td>   <td></td> </tr>
 </table>
